Remove version from building block id
Breaks migrations
